fix paragraph spacing w custom css

--- a/css/custom.css
+++ b/css/custom.css
@@ -140,3 +140,7 @@
 .commText{
 	width: 400px;
 }
+
+p#ex1 {
+    max-width: 650px;
+}
